IC-Test/objects/ChemCare__c.object
<CustomObject>
    <description>This is the CPP for the ChemCare products.  The Product is a &quot;Waste Stream&quot;; the Producer is a &quot;TSDF&quot;; and the Supplier is a &quot;Service Provider&quot;.</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ChemCare</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AnnualGeneratedPounds__c</fullName>
        <label>Annual LBs Generated</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualGeneratedUOM__c</fullName>
        <label>Annual Amount Generated in UOM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCCorporateAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ChemCare Corporate Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N30000000jMR0EAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompetitorTSDF__c</fullName>
        <label>Competitor TSDF</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Waste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGFA Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agmet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Waste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amerifuel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aristech Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ash Grove Cement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ashland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Tech Recycling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ausimont USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barton Solvents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beaver Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blacklidge Emulsions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brenntag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridgeport United Recycling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burlington Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casie Ecology Oil Salvage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chem Con-Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Pollution Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Solvents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Waste Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chem-Pak Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemtron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chesapeake Waste Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Wastes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean Harbors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coleman</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor_TSDF_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor TSDF</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Waste Streams (Competitor TSDF Lookup)</relationshipLabel>
        <relationshipName>Waste_Streams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContainerSize__c</fullName>
        <description>New field added by request of Leah Knight 11/17/2005.
Steve MacDonnell requested increasing length of this field from 3 to 6 digits 2/26/2007.</description>
        <label>Container Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContainerType__c</fullName>
        <label>Container Type</label>
        <picklist>
            <picklistValues>
                <fullName>Burlap, Cloth, Paper, Plastic Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cylinders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dump Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiberboard or Plastic Drums</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiber or Plastic Boxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Bins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lab Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Boxes, Cartons, Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Drums, Barrels, Kegs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roll-off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanks Portable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacuum Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wooden Boxes, Cartons, Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wooden Drums, Barrels, Kegs</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContainerUOM__c</fullName>
        <description>Added new field per user request Leah Knight 11/17/2005</description>
        <label>Container UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carboy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cylinder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiber Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Pint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilogram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supersack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tote</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContractExpDate__c</fullName>
        <label>Contract Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCodes__c</fullName>
        <label>D Codes</label>
        <picklist>
            <picklistValues>
                <fullName>D001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D030</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DisposalTechnology__c</fullName>
        <label>Disposal Technology</label>
        <picklist>
            <picklistValues>
                <fullName>Deep Well Injection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel Blending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incineration (Hazardous Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incineration (Non-Hazardous Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lab Packing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landfill (Hazardous Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landfill (Non-Hazardous Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Spec Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recycling &amp; Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Fuels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Universal Waste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wastewater Treatment</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EstimatedSalesValue__c</fullName>
        <label>Estimated Sales Value</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventOnGoingBusiness__c</fullName>
        <description>Added new field per user request Leah Knight 11/17/2005</description>
        <label>Event/Ongoing Business</label>
        <picklist>
            <picklistValues>
                <fullName>Event (one-time)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FCodes__c</fullName>
        <label>F Codes</label>
        <picklist>
            <picklistValues>
                <fullName>F001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F032</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F034</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F035</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F037</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F038</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F039</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FOB__c</fullName>
        <label>FOB</label>
        <picklist>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hazardous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added new field per user request Leah Knight 11/17/2005</description>
        <label>Hazardous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KCodes__c</fullName>
        <label>K Codes</label>
        <picklist>
            <picklistValues>
                <fullName>KO88</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K044</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K045</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K046</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K048</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K049</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K050</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K051</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K052</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K061</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K062</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K083</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K086</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K087</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K088</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K093</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K094</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K104</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K126</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K141</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K142</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K143</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K144</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K145</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K147</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K148</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K156</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>ChemCare</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCodes__c</fullName>
        <label>P Codes</label>
        <picklist>
            <picklistValues>
                <fullName>P001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P031</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P033</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PartnerTSDF__c</fullName>
        <label>Univar Partner TSDF</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Waste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGFA Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agmet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Waste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amerifuel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aristech Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ash Grove Cement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ashland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Tech Recycling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ausimont USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barton Solvents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beaver Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blacklidge Emulsions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brenntag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridgeport United Recycling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burlington Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casie Ecology Oil Salvage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chem Con-Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Pollution Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Solvents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Waste Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chem-Pak Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemtron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chesapeake Waste Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Wastes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean Harbors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coleman</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PercentOther__c</fullName>
        <label>% Other</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PhysicalState__c</fullName>
        <label>Physical State</label>
        <picklist>
            <picklistValues>
                <fullName>Lab Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Solid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sludge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid/Solid Mixture</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PriceUOM__c</fullName>
        <label>$ per UOM</label>
        <precision>11</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PricingUOM__c</fullName>
        <label>$ UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Burlap, Cloth, Paper, Plastic Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cubic Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cubic Yards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cylinders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dump Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiberboard Or Plastic Drum, Barrel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiber Or Plastic Boxes, Cartons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilogram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linear Foot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Boxes, Cartons, Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Drums, Barrels, Kegs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metric Tons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pounds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanks Portable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wooden Boxes, Cartons, Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wooden Drums, Barrels, Kegs</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>